force-app/main/default/objects/Receptionist__c/Receptionist__c.object-meta.xml
<CustomObject>
    <label>Receptionist</label>
    <nameField>
        <label>Receptionist Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Receptionists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>