force-app/main/default/objects/Receptionist__c/fields/Assigned_Department__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Department__c</fullName>
    <label>Assigned Department</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Value1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>