force-app/main/default/objects/Receptionist__c/fields/Employee_ID__c.field-meta.xml
<CustomField>
    <fullName>Employee_ID__c</fullName>
    <label>Employee ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>