force-app/main/default/objects/Receptionist__c/fields/Supervisor__c.field-meta.xml
<CustomField>
    <fullName>Supervisor__c</fullName>
    <label>Supervisor</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>