force-app/main/default/objects/Receptionist__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Email_Address__c</columns>
    <columns>Phone_Number__c</columns>
    <columns>Employee_ID__c</columns>
    <columns>Shift_Timing__c</columns>
    <columns>Assigned_Department__c</columns>
    <columns>Supervisor__c</columns>
    <columns>Joining_Date__c</columns>
    <columns>Is_Active__c</columns>
    <columns>Address__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>